# coding: utf-8
[metadata]
name = tvrip
version = 2.0
description = An application for extracting and transcoding DVDs of TV series
long_description = file: README.rst
author = Dave Jones
author_email = dave@waveform.org.uk
project_urls =
    Source Code = https://github.com/waveform80/tvrip
    Issue Tracker = https://github.com/waveform80/tvrip/issues
keywords = handbrake tv rip
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Multimedia :: Video :: Conversion

[options]
packages = find:
install_requires =
    sqlalchemy<2.0dev
    requests

[options.extras_require]
test =
    pytest
    pytest-cov
doc =
    sphinx
    pkginfo

[options.entry_points]
console_scripts =
    tvrip = tvrip.main:main

[tool:pytest]
addopts = -rsx --cov --tb=short
testpaths = tests

[coverage:run]
source = tvrip
branch = true

[coverage:report]
show_missing = true
exclude_lines =
    assert False
    raise NotImplementedError
    raise AssertionError
    pass
