# coding: utf-8
[metadata]
name = tvrip
version = 2.0
description = Extract and transcode TV series from DVD or Bluray
long_description = file: README.rst
author = Dave Jones
author_email = dave@waveform.org.uk
project_urls =
    Source Code = https://github.com/waveform80/tvrip
    Issue Tracker = https://github.com/waveform80/tvrip/issues
keywords = handbrake dvd bluray tv rip
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Multimedia :: Video :: Conversion

[options]
packages = find:
python_requires = >=3.8
install_requires =
    setuptools
    importlib_resources~=1.3;python_version<'3.9'
    sqlalchemy>=1.4
    requests
    docutils
    rich

[options.package_data]
tvrip =
    *.rst

[options.extras_require]
test =
    pytest
    pytest-cov
doc =
    sphinx
    sphinx-rtd-theme

[options.entry_points]
console_scripts =
    tvrip = tvrip.main:main

[tool:pytest]
addopts = -rsx --cov --tb=short
testpaths = tests

[coverage:run]
source = tvrip
branch = true

[coverage:report]
show_missing = true
exclude_lines =
    assert False
    raise NotImplementedError
    raise AssertionError
    pass

[copyrights:settings]
include =
  **/*.py
  **/*.rst
exclude =
  docs/examples/*.py
  docs/license.rst
license = LICENSE.txt
preamble =
  tvrip: extract and transcode DVDs of TV series
strip-preamble = false

[previewer:settings]
command = make -C docs html
html = build/html
watch =
  tvrip/*.py
  docs/*.rst
  README.rst
